# Day-3-Lab-Chatbot-vs-react-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  TEST_CASES.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
app/: config.py  database.py  main.py  seed.py
app/agent/: react_agent.py
app/api/: router.py
app/api/endpoints/: chat.py  crud.py  dashboard.py  health.py
app/core/: deepseek_provider.py  llm_provider.py  ollama_provider.py  openai_provider.py
app/data/: employees.json  hr_policy.json  leave_requests.jsonl  tasks.jsonl
app/models/: db_models.py  schemas.py
app/telemetry/: logger.py  metrics.py
app/tools/: __init__.py  hr_tools.py  task_tools.py  tools.py  user_management_tools.py
docs/: README.md  architecture.md  crud-tool-calling.md  evaluation.md  local-setup-and-demo.md  product-spec.md  rag-design.md  react-flow.md  tools-and-api.md  user-management.md
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/components/: header.tsx  login-form.tsx  public-header.tsx  sidebar.tsx
frontend/data/: employees.json
frontend/lib/: api.ts  avatar.ts
report/group_report/: GROUP_REPORT.md
report/individual_reports/: REPORT_BUI_HOANG_LINH.md  REPORT_MAI_NGOC_DUY.md  REPORT_MEMBER_2.md  REPORT_MEMBER_4.md  REPORT_NGUYEN_VIET_LINH.md  TEMPLATE_INDIVIDUAL_REPORT.md
tests/: test_chat.py  test_leave_request_tools.py  test_react_agent.py  test_task_tools.py  test_user_management_tools.py
(+6 files in other folders)
